--- a/webapp/templates/daten.html
+++ b/webapp/templates/daten.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Daten zum Download | {{ config.site_name }}{% endblock %}
 {% block ogtitle %}Daten zum Download | {{ config.site_name }}{% endblock %}
-{% block meta_description %}Hier kannst Du die Daten hinter dem offenen Ratsinformationssystem herunter laden. Open Data First!{% endblock %}
+{% block meta_description %}Hier können Sie die Daten hinter dem offenen Ratsinformationssystem herunter laden. Open Data First!{% endblock %}
 
 {% block riscontent %}
 <div class="content top">
@@ -13,7 +13,7 @@
 		
 		<p>Bei den Inhalten handelt es sich größtenteils um amtliche Dokumente, die um einige Daten angereichert wurden.</p>
 		
-		<p>Wenn Du die Daten für eigene Projekte nutzt, freuen wir uns über eine <a href="/kontakt/">Nachricht</a> und einen Link zu {{ config.site_host }}!</p>
+		<p>Wenn Sie die Daten für eigene Projekte nutzen, freuen wir uns über eine <a href="/impressum/">Nachricht</a> und einen Link zu {{ config.site_host }}!</p>
 
 	</div>
 </div>
