--- a/webapp/templates/disclaimer.html
+++ b/webapp/templates/disclaimer.html
@@ -18,10 +18,9 @@
 		
 		<p><b>Die Nutzung des offenen Ratsinformationssystems geschieht ausschließlich auf eigene Verantwortung der Nutzerinnen und Nutzer.</b></p>
 		
-		<p>Solltest Du Dich auf hier veröffentlichte amtliche Dokumente beziehen wollen, erkundige Dich bitte bei den <b>offiziellen Quellen</b> (der Stadtverwaltung, dem Rat, den Gremien) nach der aktuellen und amtlichen Version.</p>
-
+		<p>Solltesn Sie sich auf hier veröffentlichte amtliche Dokumente beziehen wollen, erkundigen Sie sich bitte bei den <b>offiziellen Quellen</b> (der Stadtverwaltung, dem Rat, den Gremien) nach der aktuellen und amtlichen Version.</p>
 		
-		<p>Sollten Dir weitere Probleme am Datenbestand auffallen, bitte <a href="/ueber/">kontaktiere uns</a> und beschreibe das Problem. Vielen Dank!</p>
+		<p>Sollten Ihnen weitere Probleme am Datenbestand auffallen, <a href="/ueber/">kontaktieren Sie uns bitte</a> und beschreiben Sie das Problem. Vielen Dank!</p>
 		
 	</div>
 </div>
