--- a/webapp/templates/hilfe.html
+++ b/webapp/templates/hilfe.html
@@ -12,10 +12,8 @@
 	
 	<p>Dazu werden auf {{ config.site_host }} Dokumente und Daten, die in den jeweiligen Ratsinformationssystemen (<abbr title="Ratsinformationssystem">RIS</abbr>) veröffentlicht werden, gesammelt, aufbereitet und in einer nutzerfreundlichen Art und Weise dargestellt.</p>
 </div>
-<div class="content middle">
-		
+<div class="content middle">	
 	<p style="text-align: center; margin: 0 5em;">{{ config.site_name }} richtet sich an alle, die sich dafür interessieren, wie die kommunale Politik ihr Leben direkt und indirekt beeinflusst. Wir vermuten, dass sich dieser Kreis der Interessierten durch eine Erleichterung des Zugangs zu Informationen vergrößern lässt. Außerdem glauben wir, dass wir viel voneinander lernen können, so dass der Blick in die Nachbarkommune ebenfalls möglich sein sollte.</p>
-
 </div>
 <div class="content middle">
 	<div style="overflow: auto;">
@@ -23,8 +21,8 @@
 			<img src="/static/img/ueber/ueber-indeinernaehe.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: left; width: 310px;">
-			<p><b>Dinge in meiner Nähe</b>: Über das obere Suchfeld der Startseite kannst Du nach Straßen und Plätzen suchen, die in Dokumenten und Vorgängen erwähnt wurden. Geben bitte zunächst die Straße und die Stadt an. Wenn Du möchtest, kannst Du weiter oben die Suche auf eine bestimmte Region beschränken. Im Suchergebnis werden auf der Karte Straßen im Umkreis des gesuchten Ortes rot unterlegt. Ein Klick auf die Straße zeigt dann eine zugehörige Zahl an Treffern, über die Du mit einem weiteren Klick zu den Dokumenten gelangst. <a href="/">Ausprobieren</a></p>
-			<p>Hierbei musst Du zunächst die Straße, Stadt angeben. Außerdem kannst Du die Region einschränken, wenn Du dies möchtest. Auf der Karte werden dann Straßen mit Suchergebnissen rot unterlegt. Klicke auf die Straße, um die Dokumente zu erhalten.</p>
+			<p><b>Dinge in meiner Nähe</b>: Über das obere Suchfeld der Startseite können Sie nach Straßen und Plätzen suchen, die in Dokumenten und Vorgängen erwähnt wurden. Geben Sie bitte zunächst die Straße und die Stadt an. Wenn Sie möchten, können Sie weiter oben die Suche auf eine bestimmte Region beschränken. Im Suchergebnis werden auf der Karte Straßen im Umkreis des gesuchten Ortes rot unterlegt. Ein Klick auf die Straße zeigt dann eine zugehörige Zahl an Treffern, über die Sie mit einem weiteren Klick zu den Dokumenten gelangen. <a href="/">Ausprobieren</a></p>
+			<p>Hierbei müssen Sie zunächst die Straße, Stadt angeben. Außerdem können Sie die Region einschränken, wenn Sie dies möchten. Auf der Karte werden dann Straßen mit Suchergebnissen rot unterlegt. Klicken Sie auf die Straße, um die Dokumente zu erhalten.</p>
 		</div>
 	</div>
 </div>
@@ -34,7 +32,7 @@
 			<img src="/static/img/ueber/ueber-suche.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: right; width: 310px;">
-			<p><b>Flexible Suchfunktionen</b>: Über das untere Suchfeld der Startseite kannst Du nach allen Wörtern suchen, die in den Dokumenten vorkommen. Du kannst das Suchergebnis auch auf bestimmte Gremien, wie z.B. die Bezirksvertretung Ihres Bezirks, oder nach Arten von Dokumenten beschränken. Es kann außerdem nach Satzteilen gesucht werden: Diese setze bitte in Anführungszeichen, also z.B. "Anlage Verwaltungsrat". <a href="/suche/">Ausprobieren</a></p>
+			<p><b>Flexible Suchfunktionen</b>: Über das untere Suchfeld der Startseite können Sie nach allen Wörtern suchen, die in den Dokumenten vorkommen. Sie können das Suchergebnis auch auf bestimmte Gremien, wie z.B. die Bezirksvertretung Ihres Bezirks, oder nach Arten von Dokumenten beschränken. Es kann außerdem nach Satzteilen gesucht werden: Diese setzen Sie bitte in Anführungszeichen, also z.B. "Anlage Verwaltungsrat". <a href="/suche/">Ausprobieren</a></p>
 		</div>
 	</div>
 </div>
@@ -44,7 +42,7 @@
 			<img src="/static/img/ueber/ueber-anlagenvorschau.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: left; width: 310px;">
-			<p><b>Anlagen-Vorschau</b>: Du kannst Anlagen zu Dokumenten, bevor Du sie zur detaillierten Einsicht herunter lädst, in einer schnellen Voransicht ansehen. Damit kannst Du schnell einen Eindruck bekommen, um welche Art von Dokument es sich handelt: Antragstext, Bericht, Präsentation etc. Damit fällt die Entscheidung, welches Dokument einen näheren Blick wert ist, leichter. <a href="/suche/">Ausprobieren</a></p>
+			<p><b>Anlagen-Vorschau</b>: Sie können Anlagen zu Dokumenten, bevor Sie diese zur detaillierten Einsicht herunter laden, in einer schnellen Voransicht ansehen. Damit können Sie schnell einen Eindruck bekommen, um welche Art von Dokument es sich handelt: Antragstext, Bericht, Präsentation etc. Damit fällt die Entscheidung, welches Dokument einen näheren Blick wert ist, leichter. <a href="/suche/">Ausprobieren</a></p>
 		</div>
 	</div>
 </div>
@@ -54,7 +52,7 @@
 			<img src="/static/img/ueber/ueber-persistenteurls.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: right; width: 310px;">
-			<p><b>Persistente URLs für Anlagen</b>: Anders als im Ratsinformationssystem der jeweiligen Stadt kannst Du alle Anlagen (z.B. PDF-Dokumente) über einen öffentlichen, langfristig bestehenden <abbr title="Uniform Resource Locator">URL</abbr> abrufen. Dies ist eine Grundvoraussetzung, damit Du einen Favoriten/ein Lesezeichen auf die Datei setzen oder einen Link zum Dokument per E-Mail weiter senden kannst.</p>
+			<p><b>Persistente URLs für Anlagen</b>: Anders als im Ratsinformationssystem der jeweiligen Stadt können Sie alle Anlagen (z.B. PDF-Dokumente) über einen öffentlichen, langfristig bestehenden <abbr title="Uniform Resource Locator">URL</abbr> abrufen. Dies ist eine Grundvoraussetzung, damit Sie einen Favoriten/ein Lesezeichen auf die Datei setzen oder einen Link zum Dokument per E-Mail weiter senden können.</p>
 		</div>
 	</div>
 </div>
