--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -45,9 +45,9 @@ var CONF = {
 	<div id="position-form-container" class="content middle">
 		<div id="position-prompt">
 			<form id="position-prompt-form" action="/" method="GET">
-				<div class="question">Sieh Dir an, was die Politik in Deiner Umgebung macht:</div>
+				<div class="question">Siehen Sie sich an, was die Politik in Ihrer Umgebung macht:</div>
 				<div>
-					<span class="mobilerow"><label for="address" id='address-label'>Straße und Stadt:</label> <input id="address" type="text" name='address' title="Straße in der Du wohnst oder für die Du Dich interessierst"/></span>
+					<span class="mobilerow"><label for="address" id='address-label'>Straße und Stadt:</label> <input id="address" type="text" name='address' title="Straße und Stadt, in der Sie wohnen oder für die Sie sich interessieren"/></span>
 					<a href="#" id='position-prompt-submit' class="awesome extrawide">Anzeigen</a>
 					<span class="spinner placeholder"></span>
 				</div>
@@ -57,7 +57,7 @@ var CONF = {
 	</div>
 	<div id="map" style="margin-top: 3px;"></div>
 	<div class="content bottom searchform">
-		<div class="header">&hellip; oder suche nach Themen, die Dich interessieren:</div>
+		<div class="header">&hellip; oder suchen Sie nach Themen, die Sie interessieren:</div>
 		<form id="search-form" method="get" action="/suche/" accept-charset="utf-8">
 			<input type="text" id="qinput" name="q" value="" />
 			<a href="#" id="submit" class="awesome extrawide">Suchen</a>
