--- a/webapp/templates/suche.html
+++ b/webapp/templates/suche.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Suche | {{ config.site_name }}{% endblock %}
 {% block ogtitle %}Suche | {{ config.site_name }}{% endblock %}
-{% block meta_description %}Hier findest Du alle Dokumente im Bestand{% endblock %}
+{% block meta_description %}Hier finden Sie alle Dokumente im Bestand{% endblock %}
 
 {% block head %}
 {{ super() }}
