--- a/webapp/templates/ueber.html
+++ b/webapp/templates/ueber.html
@@ -18,13 +18,13 @@
 	<p>Aus diesem Grunde haben wir diese Seite geschaffen: ein Ratsinformationssystem (<abbr title="Ratsinformationssystem">RIS</abbr>), welches für jeden nutzbar ist.</p>
 	<blockquote class="nice">Ziel des offenen Ratsinformationssystems ist es, Informationen, Dokumente und Daten aus der Kommunalpolitik deutschlandweit für jedermann offen zugänglich zu machen.</blockquote>
 	<p>Dazu werden auf Dokumente und Daten, die in den jeweiligen Ratsinformationssystemen vor Ort veröffentlicht werden, gesammelt, aufbereitet und in einer nutzerfreundlichen Art und Weise dargestellt.</p>
-	<p>Wir wollen das offizielle Ratsinformationssystem nicht ersetzen, sondern eine Alternative bieten. Die offiziellen Ratsinformationssysteme sind optimal für die tägliche Arbeit der Verwaltung und der politisch aktiven. Doch für einen einfachen Einstieg braucht es eine andere Oberfläche. Diese bieten wir.</p>
+	<p>Wir wollen das offizielle Ratsinformationssystem nicht ersetzen, sondern eine Alternative bieten. Die offiziellen Ratsinformationssysteme sind optimal für die tägliche Arbeit der Verwaltung und der politisch aktiven. Doch für einen einfachen Einstieg braucht es eine andere Oberfläche. Diese wollen wir anbieten.</p>
 </div>
 <div class="content middle" id="feedback">
 	<h2 class="top-nomargin">Wünsche äußern & weitere Städte</h2>
 	<div style="text-align: center; margin: 3em 5em;">
-		<p>Wir haben eine Seite eigens zu dem Zweck, damit Du Anregungen und Verbesserungsvorschläge öffentlich äußern kann. Du kannst außerdem Vorschläge von anderen sehen, bewerten und kommentieren. Die Vorschläge werden auch hier einfließen.</p>
-		<p>Du kannst dort ebenso Städte vorschlagen, welche du hier veröffentlichst sehen möchtest. Bitte beachte dabei aber, dass eine neue Stadt viel Arbeit bedeutet. Wenn Du programmieren kannst und / oder finanzielle Ressourcen hast, wird das vieles vereinfachen. <a href="/impressum/">Kontaktiere uns dazu gerne direkt!</a></p>
+		<p>Wir haben eine Seite eigens zu dem Zweck, damit Sie Anregungen und Verbesserungsvorschläge öffentlich äußern können. Sie können außerdem Vorschläge von anderen sehen, bewerten und kommentieren. Die Vorschläge werden auch hier einfließen.</p>
+		<p>Sie können dort ebenso Städte vorschlagen, welche Sie hier veröffentlicht sehen möchten. Bitte beachten Sie dabei aber, dass eine neue Stadt viel Arbeit bedeutet. Wenn Sie programmieren können und / oder finanzielle Ressourcen haben, wird das vieles vereinfachen. <a href="/impressum/">Kontaktieren Sie uns dazu gerne direkt!</a></p>
 		<p><a class="awesome large" href="http://politik-bei-uns.uservoice.com/" target="_blank">Ideen ansehen und hinzufügen &nbsp; &rarr;</a></p>
 	</div>
 </div>
@@ -73,7 +73,7 @@
 				<img src="/static/img/team/du.jpg" width="150" height="150" alt="Du" style="border: 0"/>
 			</div>
 			<div style="width: 400px; float: left;">
-				Hier könnte <strong>Dein Name</strong> stehen. Wenn Du an {{ config.site_name }} mitwirken möchtest, melde Dich auf einem der vielen Wege möglichen Wege!
+				Hier könnte <strong>Ihr Name</strong> stehen. Wenn Sie an {{ config.site_name }} mitwirken möchten, melden Sie sich doch einfach auf einem der vielen Wege möglichen Wege!
 			</div>
 		</div>
 	</div>
@@ -87,7 +87,7 @@
 				<img src="/static/img/sponsoring/linuxhotel.png" alt="Linuxhotel" style="border: 0"/>
 			</div>
 			<div style="width: 450px; float: left; padding: 10px 0px 0px 50px;">
-				Das <a href="http://linuxhotel.de/">Linuxhotel</a> Villa Vogelsang bietet Schulungen uns Kurse überwiegend aus dem Bereich freier Software an. Neben technischem Komfort wie ein vollständig vernetztes Haus incl. Park gibt es auch Freizeitangebote wie ein Fitness- und Saunabereich. Es unterstützte das offene Ratsinformationssystem, indem es in der Anfangszeit für ein Jahr die Server für die Initiative OpenRuhr sponsorte.
+				Das <a href="http://linuxhotel.de/">Linuxhotel</a> Villa Vogelsang bietet Schulungen uns Kurse überwiegend aus dem Bereich freier Software an. Neben technischem Komfort wie ein vollständig vernetztes Haus incl. Park gibt es auch Freizeitangebote wie ein Fitness- und Saunabereich. Es unterstützte im Jahre 2013 - 2014 das offene Ratsinformationssystem, indem es in der Anfangszeit für ein Jahr die Server für die Initiative OpenRuhr sponsorte.
 			</div>
 		</div>
 	</div>
