--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -45,7 +45,7 @@ var CONF = {
 	<div id="position-form-container" class="content middle">
 		<div id="position-prompt">
 			<form id="position-prompt-form" action="/" method="GET">
-				<div class="question">Siehen Sie sich an, was die Politik in Ihrer Umgebung macht:</div>
+				<div class="question">Sehen Sie sich an, was die Politik in Ihrer Umgebung macht:</div>
 				<div>
 					<span class="mobilerow"><label for="address" id='address-label'>Straße und Stadt:</label> <input id="address" type="text" name='address' title="Straße und Stadt, in der Sie wohnen oder für die Sie sich interessieren"/></span>
 					<a href="#" id='position-prompt-submit' class="awesome extrawide">Anzeigen</a>
