--- a/webapp/templates/impressum.html
+++ b/webapp/templates/impressum.html
@@ -13,7 +13,7 @@
 	10997 Berlin</p>
 	
 	<p><strong>Kontakt</strong><br />
-	E-Mail: <a href="{{ config.contact_mail }}">{{ config.contact_mail }}</a><br />
+	E-Mail: <a href="mailto:{{ config.contact_mail }}">{{ config.contact_mail }}</a><br />
 	Telefon: <a href="tel:+4930577036660">+49 30 57703666-0</a><br />
 	Fax: +49 30 57703666-9</p>
 	
