--- a/webapp/templates/ueber.html
+++ b/webapp/templates/ueber.html
@@ -6,91 +6,99 @@
 {% block riscontent %}
 
 <div class="content top">
-	<h1>Was passiert bei mir vor Ort?</h1>
-	<ul>
-		<li>Warum ist die Baustelle da?</li>
-		<li>Was macht die Stadt gegen wilde Müllkippen?</li>
-		<li>Warum hat ist der Spielplatz gesperrt?</li>
-		<li>Wohin gehen eigentlich die Gewinne der Stadttochter?</li>
-		<li>Wie kann ich eigentlich bei mir vor Ort mitwirken?</li>
-	</ul>
-	<p>Wer hat sich solche Fragen noch nicht gestellt? All dies wird im Rat einer Stadt behandelt. Aber die Informationen kommen selten bei einem selbst an: zu komplex ist das offizielle Ratsinformationssystem, zu viel Vorwissen ist nötig, um die verschiedenen Ausschüsse und Regeln der Kommunalpolitik kennenzulernen.</p>
-	<p>Aus diesem Grunde haben wir diese Seite geschaffen: ein Ratsinformationssystem (<abbr title="Ratsinformationssystem">RIS</abbr>), welches für jeden nutzbar ist.</p>
-	<blockquote class="nice">Ziel des offenen Ratsinformationssystems ist es, Informationen, Dokumente und Daten aus der Kommunalpolitik deutschlandweit für jedermann offen zugänglich zu machen.</blockquote>
-	<p>Dazu werden auf Dokumente und Daten, die in den jeweiligen Ratsinformationssystemen vor Ort veröffentlicht werden, gesammelt, aufbereitet und in einer nutzerfreundlichen Art und Weise dargestellt.</p>
-	<p>Wir wollen das offizielle Ratsinformationssystem nicht ersetzen, sondern eine Alternative bieten. Die offiziellen Ratsinformationssysteme sind optimal für die tägliche Arbeit der Verwaltung und der politisch aktiven. Doch für einen einfachen Einstieg braucht es eine andere Oberfläche. Diese wollen wir anbieten.</p>
+  <h1>Was passiert bei mir vor Ort?</h1>
+  <ul>
+    <li>Warum ist die Baustelle da?</li>
+    <li>Was macht die Stadt gegen wilde Müllkippen?</li>
+    <li>Warum hat ist der Spielplatz gesperrt?</li>
+    <li>Wohin gehen eigentlich die Gewinne der Stadttochter?</li>
+    <li>Wie kann ich eigentlich bei mir vor Ort mitwirken?</li>
+  </ul>
+  <p>Wer hat sich solche Fragen noch nicht gestellt? All dies wird im Rat einer Stadt behandelt. Aber die Informationen kommen selten bei einem selbst an: zu komplex ist das offizielle Ratsinformationssystem, zu viel Vorwissen ist nötig, um die verschiedenen Ausschüsse und Regeln der Kommunalpolitik kennenzulernen.</p>
+  <p>Aus diesem Grunde haben wir diese Seite geschaffen: ein Ratsinformationssystem (<abbr title="Ratsinformationssystem">RIS</abbr>), welches für jeden nutzbar ist.</p>
+  <blockquote class="nice">Ziel des offenen Ratsinformationssystems ist es, Informationen, Dokumente und Daten aus der Kommunalpolitik deutschlandweit für jedermann offen zugänglich zu machen.</blockquote>
+  <p>Dazu werden auf Dokumente und Daten, die in den jeweiligen Ratsinformationssystemen vor Ort veröffentlicht werden, gesammelt, aufbereitet und in einer nutzerfreundlichen Art und Weise dargestellt.</p>
+  <p>Wir wollen das offizielle Ratsinformationssystem nicht ersetzen, sondern eine Alternative bieten. Die offiziellen Ratsinformationssysteme sind optimal für die tägliche Arbeit der Verwaltung und der politisch aktiven. Doch für einen einfachen Einstieg braucht es eine andere Oberfläche. Diese wollen wir anbieten.</p>
 </div>
 <div class="content middle" id="feedback">
-	<h2 class="top-nomargin">Wünsche äußern & weitere Städte</h2>
-	<div style="text-align: center; margin: 3em 5em;">
-		<p>Wir haben eine Seite eigens zu dem Zweck, damit Sie Anregungen und Verbesserungsvorschläge öffentlich äußern können. Sie können außerdem Vorschläge von anderen sehen, bewerten und kommentieren. Die Vorschläge werden auch hier einfließen.</p>
-		<p>Sie können dort ebenso Städte vorschlagen, welche Sie hier veröffentlicht sehen möchten. Bitte beachten Sie dabei aber, dass eine neue Stadt viel Arbeit bedeutet. Wenn Sie programmieren können und / oder finanzielle Ressourcen haben, wird das vieles vereinfachen. <a href="/impressum/">Kontaktieren Sie uns dazu gerne direkt!</a></p>
-		<p><a class="awesome large" href="http://politik-bei-uns.uservoice.com/" target="_blank">Ideen ansehen und hinzufügen &nbsp; &rarr;</a></p>
-	</div>
+  <h2 class="top-nomargin">Wünsche äußern & weitere Städte</h2>
+  <div style="text-align: center; margin: 3em 5em;">
+    <p>Wir haben eine Seite eigens zu dem Zweck, damit Sie Anregungen und Verbesserungsvorschläge öffentlich äußern können. Sie können außerdem Vorschläge von anderen sehen, bewerten und kommentieren. Die Vorschläge werden auch hier einfließen.</p>
+    <p>Sie können dort ebenso Städte vorschlagen, welche Sie hier veröffentlicht sehen möchten. Bitte beachten Sie dabei aber, dass eine neue Stadt viel Arbeit bedeutet. Wenn Sie programmieren können und / oder finanzielle Ressourcen haben, wird das vieles vereinfachen. <a href="/impressum/">Kontaktieren Sie uns dazu gerne direkt!</a></p>
+    <p><a class="awesome large" href="http://politik-bei-uns.uservoice.com/" target="_blank">Ideen ansehen und hinzufügen &nbsp; &rarr;</a></p>
+  </div>
 </div>
 <div class="content middle" id="mitmischen">
-	<h2 class="top-nomargin">Mitlesen und Mitmischen</h2>
-	<div style="text-align: center; margin-top: 3em; margin-bottom: 2em">
-		<div style="overflow: auto; width: 750px; margin: 0px auto;">
-			<div style="float: left; width: 160px; margin: 0 3em;">
-				<div style="height: 82px;"><a href="https://www.facebook.com/OKFNetwork" target="_blank"><img src="/static/img/facebook-f.png" width="71" height="70" alt="Facebook" style="border: 0"/></a></div>
-				<div style="margin-top: 5px;"><a href="https://www.facebook.com/OKFNetwork" target="_blank">Facebook</a></div>
-			</div>
-			<div style="float: left; width: 160px; margin: 0 3em;">
-				<div style="height: 82px;"><a href="https://twitter.com/PolitikBeiUns" target="_blank"><img src="/static/img/twitter-bird.png" width="87" height="61" alt="Twitter" style="border: 0"/></a></div>
-				<div style="margin-top: 5px;"><a href="https://twitter.com/PolitikBeiUns" target="_blank">Twitter</a></div>
-			</div>
-			<div style="float: left; width: 160px; margin: 0 3em;">
-				<div style="height: 82px;"><img src="/static/img/github-octocat.png" width="87" height="77" alt="GitHub" style="border: 0"/></div>
-				<div style="margin-top: 5px;"><a href="https://github.com/okfde/ris-web" target="_blank" title="Der Code der {{ config.site_host }}">Plattform</a> und <a href="https://github.com/okfde/ris-scraper" target="_blank" title="Software zum Auslesen von Ratsinformationssystemen">Scraper</a> als Open Source Software auf Github</div>
-			</div>
-		</div>
-	</div>
+  <h2 class="top-nomargin">Mitlesen und Mitmischen</h2>
+  <div style="text-align: center; margin-top: 3em; margin-bottom: 2em">
+    <div style="overflow: auto; width: 750px; margin: 0px auto;">
+      <div style="float: left; width: 160px; margin: 0 3em;">
+        <div style="height: 82px;"><a href="https://www.facebook.com/OKFNetwork" target="_blank"><img src="/static/img/facebook-f.png" width="71" height="70" alt="Facebook" style="border: 0"/></a></div>
+        <div style="margin-top: 5px;"><a href="https://www.facebook.com/OKFNetwork" target="_blank">Facebook</a></div>
+      </div>
+      <div style="float: left; width: 160px; margin: 0 3em;">
+        <div style="height: 82px;"><a href="https://twitter.com/PolitikBeiUns" target="_blank"><img src="/static/img/twitter-bird.png" width="87" height="61" alt="Twitter" style="border: 0"/></a></div>
+        <div style="margin-top: 5px;"><a href="https://twitter.com/PolitikBeiUns" target="_blank">Twitter</a></div>
+      </div>
+      <div style="float: left; width: 160px; margin: 0 3em;">
+        <div style="height: 82px;"><img src="/static/img/github-octocat.png" width="87" height="77" alt="GitHub" style="border: 0"/></div>
+        <div style="margin-top: 5px;"><a href="https://github.com/okfde/ris-web" target="_blank" title="Der Code der {{ config.site_host }}">Plattform</a> und <a href="https://github.com/okfde/ris-scraper" target="_blank" title="Software zum Auslesen von Ratsinformationssystemen">Scraper</a> als Open Source Software auf Github</div>
+      </div>
+    </div>
+  </div>
 </div>
 <div class="content middle" id="team">
-	<h2 class="top-nomargin">Das Team hinter {{ config.site_name }}</h2>
-	<div style="text-align: center; margin-top: 3em; margin-bottom: 2em">
-		<div style="overflow: auto; width: 750px; margin: 2em auto; text-align: left;">
-			<div style="width: 200px; float: left;">
-				<img src="/static/img/team/ernesto.jpg" width="150" height="150" alt="Ernesto" style="border: 0"/>
-			</div>
-			<div style="width: 400px; float: left;">
-				Ernesto Ruge ist einer der Gründer von der Initiative <a href="http://openruhr.de/">OpenRuhr</a>. Er hat Marians Offenes Köln zu {{ config.site_name }} weiterentwickelt. Er entwickelt gerne Daten-Anwendungen, die einen Mehrwert für Menschen geben, und möchte so Beteiligungsmöglichkeiten verbessern.<br /><br />
-				Ernestos <a href="http://sectio-aurea.org/" target="_blank">Blog</a> und <a href="https://twitter.com/the_infinity" target="_blank">Twitter Account</a>.
-			</div>
-		</div>
-		<div style="overflow: auto; width: 750px; margin: 2em auto; text-align: left;">
-			<div style="width: 200px; float: left;">
-				<img src="/static/img/team/marian.jpg" width="150" height="150" alt="Marian" style="border: 0"/>
-			</div>
-			<div style="width: 400px; float: left;">
-				Marian Steinbach hat den Vorgänger von {{ config.site_name }} mit dem Namen "Offenes Köln" ins Leben gerufen. Als freiberuflicher Interaction Designer interessiert er sich dafür, wie man Informationen, die <em>eigentlich</em> öffentlich und zugänglich sind, <em>tatsächlich</em> zugänglich macht, so dass Menschen sie wirklich benutzen können und wollen. In der Hinsicht gibt es bei Offenes Köln genug zu tun.<br /><br />
-				Marians <a href="http://www.sendung.de/" target="_blank">Blog</a> und <a href="https://twitter.com/#!/MarianSteinbach" target="_blank">Twitter Account</a>.
-			</div>
-		</div>
-		<div style="overflow: auto; width: 750px; margin: 0px auto; text-align: left;">
-			<div style="width: 200px; float: left;">
-				<img src="/static/img/team/du.jpg" width="150" height="150" alt="Du" style="border: 0"/>
-			</div>
-			<div style="width: 400px; float: left;">
-				Hier könnte <strong>Ihr Name</strong> stehen. Wenn Sie an {{ config.site_name }} mitwirken möchten, melden Sie sich doch einfach auf einem der vielen Wege möglichen Wege!
-			</div>
-		</div>
-	</div>
+  <h2 class="top-nomargin">Das Team hinter {{ config.site_name }}</h2>
+  <div style="text-align: center; margin-top: 3em; margin-bottom: 2em">
+    <div style="overflow: auto; width: 750px; margin: 2em auto; text-align: left;">
+      <div style="width: 200px; float: left;">
+        <img src="/static/img/team/ernesto.jpg" width="150" height="150" alt="Ernesto" style="border: 0"/>
+      </div>
+      <div style="width: 400px; float: left;">
+        Ernesto Ruge ist einer der Gründer von der Initiative <a href="http://openruhr.de/">OpenRuhr</a>. Er hat Marians Offenes Köln zu {{ config.site_name }} weiterentwickelt. Er entwickelt gerne Daten-Anwendungen, die einen Mehrwert für Menschen geben, und möchte so Beteiligungsmöglichkeiten verbessern.<br /><br />
+        Ernestos <a href="http://sectio-aurea.org/" target="_blank">Blog</a> und <a href="https://twitter.com/the_infinity" target="_blank">Twitter Account</a>.
+      </div>
+    </div>
+    <div style="overflow: auto; width: 750px; margin: 2em auto; text-align: left;">
+      <div style="width: 200px; float: left;">
+        <img src="/static/img/team/marian.jpg" width="150" height="150" alt="Marian" style="border: 0"/>
+      </div>
+      <div style="width: 400px; float: left;">
+        Marian Steinbach hat den Vorgänger von {{ config.site_name }} mit dem Namen "Offenes Köln" ins Leben gerufen. Als freiberuflicher Interaction Designer interessiert er sich dafür, wie man Informationen, die <em>eigentlich</em> öffentlich und zugänglich sind, <em>tatsächlich</em> zugänglich macht, so dass Menschen sie wirklich benutzen können und wollen. In der Hinsicht gibt es bei Offenes Köln genug zu tun.<br /><br />
+        Marians <a href="http://www.sendung.de/" target="_blank">Blog</a> und <a href="https://twitter.com/#!/MarianSteinbach" target="_blank">Twitter Account</a>.
+      </div>
+    </div>
+    <div style="overflow: auto; width: 750px; margin: 0px auto; text-align: left;">
+      <div style="width: 200px; float: left;">
+        <img src="/static/img/team/du.jpg" width="150" height="150" alt="Du" style="border: 0"/>
+      </div>
+      <div style="width: 400px; float: left;">
+        Hier könnte <strong>Ihr Name</strong> stehen. Wenn Sie an {{ config.site_name }} mitwirken möchten, melden Sie sich doch einfach auf einem der vielen Wege möglichen Wege!
+      </div>
+    </div>
+  </div>
 </div>
 <div class="content bottom" id="history">
-	<h2 class="top-nomargin">Geschichte</h2>
-	<div style="text-align: center;">
-		<p>Jedes Projekt hat eine Geschichte. Hier werden all jene Akteure aufgelistet, welche den Weg zum offenen Ratsinformationssystem unterstützt haben.</p>
-		<div style="overflow: auto; width: 800px; margin: 2em auto; text-align: left;">
-			<div style="width: 260px; float: left;">
-				<img src="/static/img/sponsoring/linuxhotel.png" alt="Linuxhotel" style="border: 0"/>
-			</div>
-			<div style="width: 450px; float: left; padding: 10px 0px 0px 50px;">
-				Das <a href="http://linuxhotel.de/">Linuxhotel</a> Villa Vogelsang bietet Schulungen uns Kurse überwiegend aus dem Bereich freier Software an. Neben technischem Komfort wie ein vollständig vernetztes Haus incl. Park gibt es auch Freizeitangebote wie ein Fitness- und Saunabereich. Es unterstützte im Jahre 2013 - 2014 das offene Ratsinformationssystem, indem es in der Anfangszeit für ein Jahr die Server für die Initiative OpenRuhr sponsorte.
-			</div>
-		</div>
-	</div>
+  <h2 class="top-nomargin">Geschichte</h2>
+  <div style="text-align: center;">
+    <p>Jedes Projekt hat eine Geschichte. Hier werden all jene Akteure aufgelistet, welche den Weg zum offenen Ratsinformationssystem unterstützt haben.</p>
+    <div style="overflow: auto; width: 800px; margin: 2em auto; text-align: left;">
+      <div style="width: 260px; float: left;">
+        <img src="/static/img/sponsoring/linuxhotel.png" alt="Linuxhotel" style="border: 0"/>
+      </div>
+      <div style="width: 450px; float: left; padding: 10px 0px 0px 50px;">
+        Die Agentur <a href="http://www.anatom5.de/">anatom5</a> hat unser Logo erstellt, welches Person und Ort zusammenbringt - genau die Funktion des offenen Ratsinformationssystems. Herzlichen Dank!
+      </div>
+    </div>
+    <div style="overflow: auto; width: 800px; margin: 2em auto; text-align: left;">
+      <div style="width: 260px; float: left;">
+        <img src="/static/img/sponsoring/linuxhotel.png" alt="Linuxhotel" style="border: 0"/>
+      </div>
+      <div style="width: 450px; float: left; padding: 10px 0px 0px 50px;">
+        Das <a href="http://linuxhotel.de/">Linuxhotel</a> Villa Vogelsang bietet Schulungen uns Kurse überwiegend aus dem Bereich freier Software an. Neben technischem Komfort wie ein vollständig vernetztes Haus incl. Park gibt es auch Freizeitangebote wie ein Fitness- und Saunabereich. Es unterstützte im Jahre 2013 - 2014 das offene Ratsinformationssystem, indem es in der Anfangszeit für ein Jahr die Server für die Initiative OpenRuhr sponsorte.
+      </div>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
